# orrery

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TASK.calc.md  TASK.md  loop-engineering.md  loop.ps1  loopcore.ps1  package.json  run-orrery-tests.sh  run-orrery.bat  run-orrery.sh  selftest-final.ps1  selftest-gate.ps1  selftest-resilience.ps1  selftest-resume.ps1  selftest-verify.ps1  selftest.ps1  settings.example.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
.loop/: progress.md  run.calc.out  run.out
docs/: a11y-audit-2026-07.md  capabilities.md  headless-quickstart.md  improvement-plan.md  loop-engine-upgrade-plan.md  loop-engineering.md  token-efficiency-and-quality.md  ui-modernization-plan.md  wave-progress.md
engine/: README.md  pyproject.toml
engine/loop/: cli.py  config.py  configkeys.py  core.py  cost.py  decide.py  driver_shell.py  events.py  feedback.py  gate.py  gitutil.py  heartbeat.py  lockfile.py  logio.py  metrics.py  proc.py  prompts.py  quota.py  resilient.py  supervise.py  verdict.py  verify.py
engine/loop/bmad/: __init__.py  decider.py  driver.py  phases.py  pr.py  recovery.py  story.py
engine/loop/memory/: __init__.py
engine/loop/qa/: __init__.py  discover.py  manifest.py
engine/loop/runners/: __init__.py  aider.py  base.py  claude.py  codex.py
engine/orrery_loop/: __init__.py  __main__.py  cache.py  checkpoint.py  cli.py  config.py  configkeys.py  core.py  decide.py  driver_shell.py  events.py  feedback.py  gate.py  gitutil.py  hashlock.py  heartbeat.py  lockfile.py  logio.py  metrics.py  proc.py  prompts.py  quota.py  resilient.py  supervise.py  verdict.py  verify.py
engine/orrery_loop/bmad/: __init__.py  decider.py  driver.py  phases.py  pr.py  recovery.py  sprint.py  story.py
engine/orrery_loop/memory/: __init__.py  store.py
engine/orrery_loop/qa/: __init__.py  discover.py  manifest.py
engine/orrery_loop/runners/: __init__.py  aider.py  base.py  claude.py  codex.py
engine/tests/: conftest.py  gen_golden.ps1  test_bmad_decider.py  test_bmad_driver.py  test_bmad_events.py  test_bmad_phases.py  test_bmad_pr_state.py  test_bmad_sprint.py  test_bmad_story.py  test_cache.py  test_checkpoint.py  test_cli.py  test_config.py  test_configkeys.py  test_core.py  test_core_parity.py  test_cost.py  test_decide.py  test_driver_shell.py  test_events_golden.py  test_feedback.py  test_gate.py  test_gate_failfast.py  test_hashlock.py  test_heartbeat.py  test_integration_upgrades.py  test_lockfile.py  test_logio.py  test_main_module.py  test_memory.py  test_metrics.py  test_proc.py  test_qa_discover.py  test_qa_manifest.py  test_quota.py  test_quota_survive.py  test_runners.py  test_runners_aider.py  test_runners_codex.py  test_supervise.py  (+5 more)
engine/tests/fixtures/: golden_events.jsonl
examples/hello/: README.md  TASK.md  loop.json  pytest.ini
legacy/: README.md  gen_golden.ps1  loop.ps1  loopcore.ps1
orrery/: PROTOCOL.md  README.md  _hero.mjs  _shots.mjs  _timelapse.mjs  package-lock.json  package.json  playwright.config.ts  vite.config.js
orrery/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
orrery/src-tauri/capabilities/: default.json
orrery/src-tauri/src/: control.rs  lan.rs  lib.rs  live.rs  main.rs  model.rs  reducer.rs  settings.rs  sprint.rs  tailer.rs  watcher.rs
orrery/src-tauri/tests/: golden_parity.rs
orrery/src-tauri/tests/golden/: bmad.bmad.json  calc.generic.json  demo.bmad.json  engine-polish.bmad.json  failed-dark.bmad.json  guardrails.generic.json  metrics.generic.json  multirun.generic.json  roman.generic.json  series-collision.generic.json
src/: calc.ts  roman.ts
(+135 files in other folders)
