[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orrery-loop"
version = "0.3.0"
description = "Pure, testable harness logic for the Orrery loop engine (Python port of loopcore.ps1)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["psutil>=5.9", "pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
loop = "orrery_loop.cli:main"
loop-stop = "orrery_loop.cli:main_stop"
loop-bmad = "orrery_loop.cli:main_bmad"
loop-qa = "orrery_loop.cli:main_qa"
loop-supervise = "orrery_loop.cli:main_supervise"

[tool.hatch.build.targets.wheel]
packages = ["orrery_loop"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
