[package]
name = "orrery"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orrery_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Loop Protocol watching + parsing
notify = "6"
notify-debouncer-mini = "0.4"
regex = "1"
serde_yaml = "0.9"
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }
# A7 — opt-in LAN server (axum + tokio + tower-http static fs). Random token via getrandom.
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }
getrandom = "0.2"

